; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax.c_IOSUHAX_memcpy.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax.c_IOSUHAX_memcpy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@iosuhaxHandle = common dso_local global i64 0, align 8
@IOCTL_MEMCPY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IOSUHAX_memcpy(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca [3 x i64], align 16
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* @iosuhaxHandle, align 8
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load i64, i64* @iosuhaxHandle, align 8
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %4, align 4
  br label %35

14:                                               ; preds = %3
  %15 = load i64, i64* %5, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %14
  %18 = load i64, i64* %6, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i64, i64* %7, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %20, %17, %14
  store i32 -1, i32* %4, align 4
  br label %35

24:                                               ; preds = %20
  %25 = load i64, i64* %5, align 8
  %26 = getelementptr inbounds [3 x i64], [3 x i64]* %8, i64 0, i64 0
  store i64 %25, i64* %26, align 16
  %27 = load i64, i64* %6, align 8
  %28 = getelementptr inbounds [3 x i64], [3 x i64]* %8, i64 0, i64 1
  store i64 %27, i64* %28, align 8
  %29 = load i64, i64* %7, align 8
  %30 = getelementptr inbounds [3 x i64], [3 x i64]* %8, i64 0, i64 2
  store i64 %29, i64* %30, align 16
  %31 = load i64, i64* @iosuhaxHandle, align 8
  %32 = load i32, i32* @IOCTL_MEMCPY, align 4
  %33 = getelementptr inbounds [3 x i64], [3 x i64]* %8, i64 0, i64 0
  %34 = call i32 @IOS_Ioctl(i64 %31, i32 %32, i64* %33, i32 24, i32 0, i32 0)
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %24, %23, %11
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @IOS_Ioctl(i64, i32, i64*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
